# clippor

./: .clang-format  .editorconfig  .gitignore  Makefile  gcovr.cfg  lsan_suppr.txt  meson.build  meson.options
schemas/: com.github.64bitman.clippor.gschema.xml
src/: clippor-client.c  clippor-clipboard.c  clippor-config.c  clippor-database.c  clippor-entry.c  clippor-selection.c  clippor-server.c  com.github.clippor.xml  config.c  database.c  dbus-service.c  global.c  main.c  meson.build  modules.c  server.c  util.c
src/dbus/: com-github-clippor.xml  meson.build
src/include/: clippor-client.h  clippor-clipboard.h  clippor-config.h  clippor-database.h  clippor-entry.h  clippor-selection.h  clippor-server.h  config.h  database.h  dbus-service.h  global.h  globals.h  modules.h  server.h  util.h
src/tests/: clippor-clipboard.c  meson.build
src/wayland/: meson.build  wayland-connection.c  wayland-seat.c  wayland-selection.c
src/wayland/include/: wayland-connection.h  wayland-seat.h  wayland-selection.h
src/wayland/protocol/: meson.build
src/wayland/protocols/: meson.build
src/wayland/tests/: meson.build  runner.sh  test_util.h  wayland-connection.c  wayland-seat.c
tests/: dummy-selection.c  dummy-selection.h  meson.build  spawn.c  spawn.h  test.c  test.h  test_clipboard.c  test_config.c  test_database.c  test_dbus.c  test_util.c  test_util.h  test_wayland.c
